--- a/css/style.css
+++ b/css/style.css
@@ -239,8 +239,8 @@ nav
     color: rgb(255, 235, 235);
 
     /* debugging */
-    border-style: dashed;
-    border-color: rgb(127, 255, 212);
+    /* border-style: dashed; */
+    /* border-color: rgb(127, 255, 212); */
 
 }
 .text1 h1
