--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@
     font-family: "Montserrat", Arial, sans-serif;
     box-sizing: border-box;
     width: auto;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     scroll-behavior: smooth;
 }
 
@@ -32,8 +32,8 @@ header
     z-index: 5;
     background-color: transparent;
     /* debugging */
-    border-style: dashed;
-    border-color: #00ffaa00;
+    /* border-style: dashed; */
+    /* border-color: #00ffaa; */
 }
 
 body
@@ -44,13 +44,14 @@ body
     margin: 0px; /* removes the margin*/
     padding: 0px; /* removes padding */
     overflow:auto;
-    background-color: #420017;
+    background-color: #2c0015;
+    overflow-x: hidden;
     /* display: flex;
     align-items: center;
     justify-content: center; */
     /* debugging */
-    border-style: dashed;
-    border-color: #00ffaa00;
+    /* border-style: dashed; */
+    /* border-color: #00ffaa; */
 
 
 }
@@ -209,8 +210,10 @@ nav
 {
 
     background-image: url("../assets/bg3.png");
-    background-size:cover;
-    background-position: center;
+    background-color: #39000f;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* background-position:center; */
     top: 0;
     left: 0;
     
@@ -235,7 +238,7 @@ nav
     position: absolute;
     text-align: start;
     left: 90px;
-    width: 60%;
+    width: 47%;
     color: rgb(255, 235, 235);
 
     /* debugging */
@@ -320,7 +323,7 @@ nav
 }
 .double_arrow
 {
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     padding-top: 10px;
     padding-bottom: 22px;
@@ -408,7 +411,6 @@ nav
     width: 100%;
     height: 650px;
 
-
     display:flex;
     justify-content: space-around;
     /* align-items: center; */
@@ -428,7 +430,7 @@ nav
 .video
 {
     align-self: center;
-    margin-left: 40px;
+    padding-left: 40px;
     width: auto;
     height: 75%;
     box-shadow: 1px 1px 49px rgba(0, 0, 0, 0.363);
@@ -447,8 +449,8 @@ nav
 
 
     
-    margin-right: 20px;
-    margin-left: 40px;
+    padding-right: 20px;
+    padding-left: 40px;
     line-height: 1.7;
     letter-spacing: 0.5px;
     
@@ -774,7 +776,10 @@ nav
         text-transform: uppercase;
 
     }
-
+    .text1
+    {
+        width: 60%;
+    }
 
 }
 
@@ -908,6 +913,7 @@ nav
     }
     .text1
     {
+        width: 70%;
         left: 23px;
     }
 
